--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,9 +1,3 @@
-nav {
-  flex-direction: column !important;
-}
-
-@media screen and (min-width: 991px) {
-  nav {
-    flex-direction: row !important;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
