--- a/src/app/App.css
+++ b/src/app/App.css
@@ -8,3 +8,15 @@
 body {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+@media screen and (min-width: 500px) {
+  .heading {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .logo {
+    display: flex;
+  }
+}
