--- a/src/app/App.css
+++ b/src/app/App.css
@@ -2,8 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* TODO: delete unused fonts */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700&family=Lato:ital,wght@0,500&display=swap');
 
 body {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
